--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles.css">
+
   <meta charset="utf-8">
   <title>AppPeliseries</title>
   <base href="/">
